# yambda

./: .gitignore  .stylish-haskell.yaml  .travis.yml  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  aws-lambda-haskell-runtime-client.cabal  aws-lambda-haskell-runtime-client.nix  package.yaml  release.nix  stack.yaml
.github/: CODEOWNERS
app/: Main.hs
core/: aws-lambda-haskell-runtime-client.cabal  package.yaml  yambda.cabal
core/data/: api-gateway-v2-request-base64-body.json  api-gateway-v2-request-json-body.json  api-gateway-v2-request-minimal.json  api-gateway-v2-request-text-body.json  api-gateway-v2-response-base64-body.json  api-gateway-v2-response-json-body.json  api-gateway-v2-response-text-body.json
core/src/AWS/Lambda/: Encoding.hs  Handler.hs  RuntimeClient.hs  Types.hs
core/src/AWS/Lambda/Event/: APIGateway.hs  APIGatewayV2.hs  JSON.hs  Kinesis.hs  S3.hs  SNS.hs
core/test/AWS/Lambda/: KinesisDataStreamsEventSpec.hs  KinesisSpec.hs  S3EventSpec.hs
core/test/AWS/Lambda/Event/: APIGatewayV2Spec.hs  KinesisSpec.hs  S3Spec.hs
events/: example.dhall  example.json
examples/: aws-lambda-haskell-runtime-client-examples.cabal  package.yaml  yambda-examples.cabal
examples/api-gateway/: Main.hs  template.yaml
examples/dhall/: Main.hs  template.yaml
examples/kinesis/: Main.hs  template.yaml
examples/s3/: Main.hs  template.yaml
examples/sns/: Main.hs  template.yaml
examples/wai/: Main.hs  request-get-hello.json  template.yaml
src/AWS/: Types.hs
src/AWS/Lambda/: APIGatewayInputEvent.hs  APIGatewayOutputEvent.hs  DhallHandler.hs  Encoding.hs  Handler.hs  HttpClient.hs  InvocationEvent.hs  JsonHandler.hs  KinesisDataStreamsEvent.hs  OutputEvent.hs  RuntimeClient.hs  S3Event.hs  SNSEvent.hs  Types.hs
test/AWS/Lambda/: KinesisDataStreamsEventSpec.hs  KinesisSpec.hs  RuntimeClientSpec.hs  S3EventSpec.hs  TestHttpClient.hs
wai/: aws-lambda-haskell-runtime-client-wai.cabal  package.yaml  yambda-wai.cabal
wai/data/: request01.json  request02.json
wai/src/AWS/Lambda/Wai/: Encoding.hs  Handler.hs
wai/test/AWS/Lambda/Wai/: EncodingSpec.hs
