cabal-version: 1.12

name:           aws-lambda-haskell-runtime-client-examples
version:        0.1.0.0
synopsis:       AWS Lambda Haskell Runtime Client
description:    Please see the README on GitHub at <https://github.com/EarnestResearch/aws-lambda-haskell-runtime-client#readme>
category:       AWS
homepage:       https://github.com/EarnestResearch/aws-lambda-haskell-runtime-client#readme
bug-reports:    https://github.com/EarnestResearch/aws-lambda-haskell-runtime-client/issues
author:         Louis Vera
maintainer:     dcq-team@earnestresearch.com
copyright:      Earnest Research 2019
license:        MIT
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/EarnestResearch/aws-lambda-haskell-runtime-client

flag static
  description: Static build
  manual: True
  default: False

executable api-gateway-exe
  main-is: Main.hs
  other-modules:
      Paths_aws_lambda_haskell_runtime_client_examples
  hs-source-dirs:
      api-gateway
  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
      aws-lambda-haskell-runtime-client
    , base >=4.7 && <5
    , lens >=4.17.1 && <4.19
    , monad-logger >=0.3.30 && <0.4
  if flag(static)
    cc-options: -static
    ld-options: -static -pthread
  default-language: Haskell2010

executable dhall-exe
  main-is: Main.hs
  other-modules:
      Paths_aws_lambda_haskell_runtime_client_examples
  hs-source-dirs:
      dhall
  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
      aws-lambda-haskell-runtime-client
    , base >=4.7 && <5
    , dhall >= 1.26.1 && < 1.31
    , monad-logger >=0.3.30 && <0.4
  if flag(static)
    cc-options: -static
    ld-options: -static -pthread
  default-language: Haskell2010

executable kinesis-exe
  main-is: Main.hs
  other-modules:
      Paths_aws_lambda_haskell_runtime_client_examples
  hs-source-dirs:
      kinesis
  ghc-options: -threaded -rtsopts -O2 -with-rtsopts=-N
  build-depends:
      aws-lambda-haskell-runtime-client
    , base >=4.7 && <5
    , monad-logger >=0.3.30 && <0.4
    , mtl >=2.2.2 && <2.3
  if flag(static)
    cc-options: -static
    ld-options: -static -pthread
  default-language: Haskell2010

executable s3-exe
  main-is: Main.hs
  other-modules:
      Paths_aws_lambda_haskell_runtime_client_examples
  hs-source-dirs:
      s3
  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
      aws-lambda-haskell-runtime-client
    , base >=4.7 && <5
    , monad-logger >=0.3.30 && <0.4
  if flag(static)
    cc-options: -static
    ld-options: -static -pthread
  default-language: Haskell2010

executable sns-exe
  main-is: Main.hs
  other-modules:
      Paths_aws_lambda_haskell_runtime_client_examples
  hs-source-dirs:
      sns
  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
      aws-lambda-haskell-runtime-client
    , base >=4.7 && <5
    , monad-logger >=0.3.30 && <0.4
  if flag(static)
    cc-options: -static
    ld-options: -static -pthread
  default-language: Haskell2010